src/test/deca/context/invalid/Obj/extends-circulaire.deca
// Description:
//    Déclaration d'une classe qui hérite d'elle-même
//
// Résultat:
//La superclasse n'est pas définie
//
class A extends A{}
{}